tests/paczka1/small_fuzzy/66300229.err
Error in line 2: LkwVRBJVARe A879 20,4
Error in line 5: LkwVRBJVARe S192 76,4
Error in line 8: LkwVRBJVARe A879 24,8
Error in line 4: rDINN11xV A562 63,3
